cluster/maybe/deployment-maybe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maybe-deployment
  namespace: maybe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maybe
  template:
    metadata:
      labels:
        app: maybe
    spec:
      nodeSelector:
        role: apps
      containers:
        - env:
            - name: SELF_HOSTED
              value: "true"
            - name: RAILS_FORCE_SSL
              value: "false"
            - name: RAILS_ASSUME_SSL
              value: "false"
            - name: GOOD_JOB_EXECUTION_MODE
              value: "async"
            - name: DB_HOST
              value: maybe-postgresql-service.maybe.svc.cluster.local
            - name: POSTGRES_DB
              value: maybe
            - name: POSTGRES_USER
              value: maybe
            - name: SMTP_PORT
              value: "587"
            - name: EMAIL_SENDER
              value: "maybe@nvaughn.email"
          image: cr.nathanv.app/ghcr.io/maybe-finance/maybe:0.4.3
          name: maybe
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /rails/storage
              name: data-vol
      volumes:
        - name: data-vol
          persistentVolumeClaim:
            claimName: maybe-pvc-data
