cluster/maybe/deployment-postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: maybe-postgresql-deployment
  namespace: maybe
spec:
  replicas: 1
  serviceName: maybe-postgresql
  selector:
    matchLabels:
      app: maybe-postgresql
  template:
    metadata:
      labels:
        app: maybe-postgresql
    spec:
      nodeSelector:
        role: apps
      containers:
        - env:
            - name: POSTGRES_USER
              value: maybe
            - name: POSTGRES_DB
              value: maybe
            # avoids issues with lost+found directory
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
          image: docker.io/library/postgres:17.4
          name: postgresql
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresql-vol
      volumes:
        - name: postgresql-vol
          persistentVolumeClaim:
            claimName: maybe-pvc-postgresql
