cluster/maybe/deployment-redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: maybe-redis-deployment
  namespace: maybe
spec:
  replicas: 1
  serviceName: maybe-redis
  selector:
    matchLabels:
      app: maybe-redis
  template:
    metadata:
      labels:
        app: maybe-redis
    spec:
      nodeSelector:
        role: apps
      containers:
        - name: redis
          # registry-proxy image-prefix
          image: cr.nathanv.app/docker.io/library/redis:7.4
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: redis-vol
      volumes:
        - name: redis-vol
          persistentVolumeClaim:
            claimName: maybe-pvc-redis
