cluster/maybe/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maybe-worker-deployment
  namespace: maybe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maybe-worker
  template:
    metadata:
      labels:
        app: maybe-worker
    spec:
      nodeSelector:
        role: apps
      containers:
        - env:
            - name: SELF_HOSTED
              value: "true"
            - name: RAILS_FORCE_SSL
              value: "false"
            - name: RAILS_ASSUME_SSL
              value: "false"
            - name: GOOD_JOB_EXECUTION_MODE
              value: "async"
            - name: DB_HOST
              value: maybe-postgresql-service.maybe.svc.cluster.local
            - name: POSTGRES_DB
              value: maybe
            - name: POSTGRES_USER
              value: maybe
            - name: SMTP_PORT
              value: "587"
            - name: EMAIL_SENDER
              value: "maybe@nvaughn.email"
            - name: REDIS_URL
              value: redis://maybe-redis-service.maybe.svc.cluster.local:6379
          image: cr.nathanv.app/ghcr.io/maybe-finance/maybe:0.5.0
          name: maybe-worker
          command: ["bundle", "exec", "sidekiq"]
