cluster/maybe/service-maybe.yaml
apiVersion: v1
kind: Service
metadata:
  name: maybe-service
  namespace: maybe
spec:
  type: ClusterIP
  selector:
    app: maybe
  ports:
    - port: 3000
      protocol: TCP
