cluster/maybe/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: maybe-redis-service
  namespace: maybe
spec:
  type: ClusterIP
  selector:
    app: maybe-redis
  ports:
    - port: 6379
      protocol: TCP
