cluster/maybe/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: maybe-route
  namespace: maybe
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`maybe.nathanv.app`)
      kind: Rule
      services:
        - name: maybe-service
          port: 3000
  tls:
    certResolver: le
    domains:
      - sans:
          - "*.nathanv.app"
